# nexus-codex

./: Cargo.toml  README.md  roadmap.md
.github/workflows/: build-appimage.yml
docs/: api.md  architecture.md  beta-program.md  release-pipeline.md  user-guide.md
scripts/: package-linux.sh
src/: cache.rs  config.rs  context.rs  daemon.rs  desktop.rs  health.rs  interface.rs  lib.rs  main.rs  mcp.rs  memory.rs  notifications.rs  provider.rs  sandbox.rs  storage.rs  swarm.rs  tui.rs  vector.rs  watcher.rs
tests/: e2e.rs
