[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.26"
crossterm = "0.27"
thiserror = "1.0"
walkdir = "2.5"
blake3 = "1.5"
tiny_http = "0.12"
anyhow = "1.0"
eframe = "0.27"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
notify = "6.1"
